--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>PRUEBA APP</title>
 </head>
 <body>
-    <h1>PRUEBA PARA LA APP</h1>
+    <h1 style="text-align: center;">PRUEBA PARA LA APP</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa reiciendis exercitationem. Praesentium eius esse quia qui consectetur, eaque fugiat at hic dolorem, necessitatibus earum voluptatibus numquam pariatur aut voluptatum?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa reiciendis <br> 
+        exercitationem. Praesentium eius esse quia qui consectetur, eaque fugiat at hic <br>
+         dolorem, necessitatibus earum voluptatibus numquam pariatur aut voluptatum?
     </p>
     
 </body>
