--- a/informacion.html
+++ b/informacion.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRUEBA APP</title>
+    <title>INFORMACIÓN</title>
 </head>
 <body>
-    <h1 style="text-align: center;">PRUEBA PARA LA APP</h1>
+    <h1 style="text-align: center;">INFORMACIÓN</h1>
     
     <nav>
         <ul>
