--- a/informacion.html
+++ b/informacion.html
@@ -15,7 +15,7 @@
             <a href="contacto.html"><li>Contacto</li></a>        
         </ul>
     </nav>
-    <p>
+    <p style="text-align: center;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa reiciendis <br> 
         exercitationem. Praesentium eius esse quia qui consectetur, eaque fugiat at hic <br>
          dolorem, necessitatibus earum voluptatibus numquam pariatur aut voluptatum?
