--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="text-align: center;">PRUEBA PARA LA APP</h1>
     
     <nav>
-        <ul>
+        <ul style="text-decoration: none;">
             <a href="index.html"><li>Inicio</li></a>
             <a href="informacion.html"><li>Información</li></a>
             <a href="contacto.html"><li>Contacto</li></a>        
