cambio para netflify

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
     <p style="text-align: center;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa reiciendis <br> 
+        ESTO ES UN CAMBIO PARA PROBAR NETLIFY <br> 
         exercitationem. Praesentium eius esse quia qui consectetur, eaque fugiat at hic <br>
          dolorem, necessitatibus earum voluptatibus numquam pariatur aut voluptatum?
     </p>
