add productos html y forms

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <ul style="text-decoration: none;">
             <a href="index.html"><li>Inicio</li></a>
             <a href="informacion.html"><li>Información</li></a>
-            <a href="contacto.html"><li>Contacto</li></a>        
+            <a href="contacto.html"><li>Contacto</li></a> 
+            <a href="productos.html"><li>Productos</li></a>        
         </ul>
     </nav>
     <p style="text-align: center;">
