--- a/productos.html
+++ b/productos.html
@@ -9,9 +9,9 @@
     <h1 style="text-align: center;"> GESTION DE PRODUCTOS </h1>
     <hr>
     <form action="insert">
-        <input type="text" name="" id="name" placeholder="Ingrese el nombre del producto">
-        <input type="text" name="" id="precio" placeholder="Ingrese el precio del producto">
-        <input type="text" name="" id="descripcion" placeholder="Ingrese la descripcion del producto">
+        <input type="text" name="" title="Nombre" id="name" placeholder="Ingrese el nombre del producto"><br>
+        <input type="text" name="" title="Precio" id="precio" placeholder="Ingrese el precio del producto"><br>
+        <input type="text" name="" title="Descripción" id="descripcion" placeholder="Ingrese la descripcion del producto">
         <br>
         <button type="submit">Agregar Producto</button>
     </form>
