--- a/productos.html
+++ b/productos.html
@@ -16,4 +16,23 @@
         <button type="submit">Agregar Producto</button>
     </form>
 </body>
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDKNHXRduY5BLvTcQDo88Kit1Jup0ldhL8",
+      authDomain: "registrodatos-eebc0.firebaseapp.com",
+      projectId: "registrodatos-eebc0",
+      storageBucket: "registrodatos-eebc0.appspot.com",
+      messagingSenderId: "703035558745",
+      appId: "1:703035558745:web:fe34b7d133bbfe0cc35a48"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </html>
