add firebase config

--- a/productos.html
+++ b/productos.html
@@ -34,5 +34,6 @@
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    import {getFirestore, collection, addDoc, onSnapShot, deleteDoc, doc} from  "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
   </script>
 </html>
