--- a/productos.html
+++ b/productos.html
@@ -35,7 +35,8 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     // CONFIGURACION FIREBASE
-    import {getFirestore, collection, addDoc, onSnapShot, deleteDoc, doc} from  "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import {getFirestore,collection,addDoc,onSnapshot,deleteDoc,doc}
+        from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
     
   </script>
 </html>
