--- a/productos.html
+++ b/productos.html
@@ -6,12 +6,15 @@
     <title>PRODUCTOS</title>
 </head>
 <body>
-    <h1 style="text-align: center;"> GESTION DE PRODUCTOS </h1>
+    <h1 style="text-align: center;"> GESTIÓN DE PRODUCTOS </h1>
     <hr>
     <form id="form-producto">
-        <input type="text" name="" title="Nombre" id="nombre" placeholder="Ingrese el nombre del producto"><br>
-        <input type="text" name="" title="Precio" id="precio" placeholder="Ingrese el precio del producto"><br>
-        <input type="text" name="" title="Descripción" id="descripcion" placeholder="Ingrese la descripcion del producto">
+        <label for="nombre">Nombre: </label>
+        <input type="text" name="" id="nombre" placeholder="Ingrese el nombre del producto"><br>
+        <label for="nombre">Precio: </label>
+        <input type="text" name="" id="precio" placeholder="Ingrese el precio del producto"><br>
+        <label for="nombre">Descripción: </label>
+        <input type="text" name="" id="descripcion" placeholder="Ingrese la descripcion del producto">
         <br>
         <button type="submit">Agregar Producto</button>
     </form>
